--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -52,5 +52,7 @@
 
     <color name="white">#FFFFFFFF</color>
 
+    <color name="text_color">#3D155F</color>
+
     <color name="xam2">#393838</color>
 </resources>
