--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:text="@string/app_name"
         android:background="@color/colorBackground"
-        android:textColor="@color/white"
+        android:textColor="@color/text_color"
         android:gravity="center"
         android:textSize="@dimen/text_size_xnormal"/>
 
@@ -21,8 +21,9 @@
         android:id="@+id/viewpager_2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_navigation"
         android:layout_below="@+id/tv_title"
-        android:layout_above="@+id/bottom_navigation"/>
+        android:layout_marginTop="0dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
