--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -44,7 +44,9 @@
             android:layout_margin="@dimen/define_dimen_8"
             android:gravity="center"
             android:text="@string/app_name"
-            android:textColor="@color/colorBackground"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+            android:background="@color/colorBackground"
             android:textSize="@dimen/text_size_small" />
 
     </LinearLayout>
